infra/rds.tf
# DB SUBNET GROUP 
resource "aws_db_subnet_group" "main" {
  name       = "cloudsnip-db-subnet-group"
  subnet_ids = [aws_subnet.private_1.id, aws_subnet.private_2.id]
  tags = { Name = "cloudsnip-db-subnet-group" }
}

# RDS INSTANCE
resource "aws_db_instance" "postgres" {
  identifier             = "cloudsnip-db"
  engine                 = "postgres"
  engine_version         = "15"
  instance_class         = "db.t3.micro"
  allocated_storage      = 20
  storage_type           = "gp2"
  db_name                = "cloudsnipdb"
  username               = var.db_username
  password               = var.db_password
  db_subnet_group_name   = aws_db_subnet_group.main.name
  vpc_security_group_ids = [aws_security_group.rds_sg.id]
  publicly_accessible    = false
  skip_final_snapshot    = true
  tags = { Name = "cloudsnip-db" }
}
